--- a/css/styles.css
+++ b/css/styles.css
@@ -151,6 +151,10 @@ img {
     }
 }
 
+.navegacion__link--blanco {
+    color: var(--blanco);
+}
+
 
 /* Nucleus */
 .nucleus {
@@ -177,7 +181,7 @@ img {
 
 }
 .listado__elemento {
-    box-shadow: 0px 0px 100px 10px  rgb(0 0 0 / .15);
+    box-shadow: 0px 0px 15px 3px  rgb(0 0 0 / .15);
     padding: 2rem;
     margin-bottom: 5rem ;
     transition: transform .3s;
@@ -285,5 +289,73 @@ img {
 @media (min-width: 768px) {
     .comisiones__texto {
         text-align: left;
+    }
+}
+
+/* Testimoniales */
+
+.testimoniales {
+    background-color: var(--primario);
+    padding: 5rem 0;
+}
+.testimoniales__heading{
+    color: var(--blanco);
+}
+.testimoniales__grid {
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 4rem;
+}
+@media (min-width: 768px) {
+    .testimoniales__grid {
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
+.testimonial {
+    box-shadow: 0px 0px 15px 3px  rgb(0 0 0 / .15);
+    background-color: var(--blanco);
+    padding: 2rem;
+    position: relative;
+}
+.testimonial__texto {
+    padding-left: 4rem;
+}
+.testimonial__texto::before {
+    content: '';
+    background-image: url(../img/comilla.png);
+    background-size: 3rem;
+    background-position: center;
+    background-repeat: no-repeat;
+    width: 3rem;
+    height: 3rem;
+    position: absolute;
+    top: 3.5rem;
+    left: 2rem;
+}
+.testimonial__autor {
+    color: var(--primario); 
+    font-weight: 700;
+    text-align: right;
+}
+
+.footer {
+    background-color: #5A30A0;
+    padding: 3rem 0;
+}
+@media (min-width: 768px) {
+    .footer__grid {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+}
+
+.footer__logo {
+    width: 20rem;
+    margin: 0 auto 4rem;
+}
+@media (min-width: 768px) {
+    .footer__logo {
+        margin: 0;
     }
 }
